# demo-projet

./: .coverage  .coveragerc  README.md  pyproject.toml
.github/workflows/: blank.yml  ci.yml  deploy.yml
data/: dataset.csv
docs/: conf.py  index.rst  requirements.txt
docs/_build/doctrees/: environment.pickle  index.doctree
docs/_build/html/: .buildinfo  genindex.html  index.html  objects.inv  search.html  searchindex.js
src/: main.py
src/mangetamain_webapp/: main.py
tests/: test_main.py
