[tool.poetry]
name = "demo-projet"
version = "0.1.0"
description = ""
authors = ["DE GIETER Hugo <hugo.degieter@telecom-paris.fr>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pandas = "^2.2.3"
plotly = "^5.24.1"
streamlit = "^1.39.0"
pytest = "^8.3.3"
pytest-cov = "^5.0.0"
sphinx = "^8.0.2"


[tool.poetry.group.dev.dependencies]
black = "^24.8.0"
mypy = "^1.11.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
